# kanban-project

./: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: =2.8.0  README.md  auth.py  config.py  crud.py  database.py  main.py  models.py  pm.db  pyproject.toml  requirements.txt  schemas.py  seed.py  serializers.py
backend/routers/: ai.py  boards.py  health.py  users.py
backend/tests/: conftest.py  test_ai.py  test_ai_chat.py  test_board_api.py  test_frontend_integration.py  test_main.py
docs/: DATABASE_SCHEMA.md  PLAN.md  code_review.md  schema.sql
frontend/: AGENTS.md  next.config.ts  playwright.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AuthProvider.tsx  ChatSidebar.tsx  ErrorBoundary.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx  ProtectedBoard.tsx
frontend/src/lib/: api.ts
frontend/tests/: kanban.spec.ts
scripts/: start.bat  start.ps1  start.sh  stop.bat  stop.ps1  stop.sh
